fix align block teams

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -148,13 +148,21 @@ a{
 }
 
 .content .page-main .teams{
-    margin-bottom: 44px;
+    margin-bottom: 22px;
 }
 
 .page-main .teams{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
+}
+
+.page-main .team{
+    margin-bottom: 22px;
+}
+
+.page-main .team:not(:nth-child(3n+1)){
+    margin-left: 18px;
 }
 
 .page-main .teams .photo{
